--- a/PokeEvents/app/src/main/res/values/colors.xml
+++ b/PokeEvents/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorBattleRed">#50CC0000</color>
+    <color name="colorCaptureBlue">#500066FF</color>
 </resources>
