--- a/PokeEvents/app/src/main/res/layout/ac_main_item.xml
+++ b/PokeEvents/app/src/main/res/layout/ac_main_item.xml
@@ -46,7 +46,7 @@
 
 
         <TextView
-            android:id="@+id/countdown"
+            android:id="@+id/time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -59,8 +59,8 @@
             android:id="@+id/place"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/countdown"
-            android:layout_below="@id/countdown"
+            android:layout_alignLeft="@id/time"
+            android:layout_below="@id/time"
             android:layout_marginTop="5dp"
             android:text="雄工道館"
             android:textSize="15sp"
@@ -71,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/place"
-            android:layout_alignRight="@id/countdown">
+            android:layout_alignRight="@id/time">
 
 
             <ImageView
